# RemoteControl

./: README.md  nginx.conf
Client/: Client6.cpp  great_proto.v1.pb.cc  great_proto.v1.pb.h  protocol.h  transmit_helper_v4.h
Server/: CMakeLists.txt  create_proto.sh  epolls.cpp  main2.cpp  transmit_helper.v2.cc
Server/include/: epolls.h  protocol.h  transmit_helper_v2.h
Server/proto/: great_proto.v1.proto
Server/proto_out/: great_proto.v1.pb.cc  great_proto.v1.pb.h
